# mcp-server

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  memories.json  new_mcp_server.sh
.github/workflows/: mcp-gurufocus-test.yml
mcp-gurufocus/: .env.template  .gitignore  CLAUDE.md  Dockerfile  docker-compose.test.yml  main.py  pyproject.toml  requirements.txt
mcp-gurufocus/.github/workflows/: test.yml
mcp-gurufocus/app/: .env.template  __init__.py  config.py  main.py
mcp-gurufocus/app/api/: __init__.py  client.py
mcp-gurufocus/app/models/: __init__.py  data_models.py
mcp-gurufocus/app/processors/: __init__.py  analyst_processor.py  financials_processor.py  financials_response.json  news_processor.py  report_generator.py  segments_processor.py  stock_processor.py
mcp-gurufocus/src/: main.py
mcp-gurufocus/tests/: conftest.py
mcp-gurufocus/tests/e2e/: test_mcp_protocol.py
mcp-gurufocus/tests/integration/: test_api_integration.py  test_mcp_server.py
mcp-gurufocus/tests/unit/: test_analyst_processor.py  test_api_client.py  test_data_models.py  test_financials_processor.py  test_mcp_tools.py  test_news_processor.py  test_report_generator.py  test_segments_processor.py  test_stock_processor.py
mcp-sem-4aireporter/: .dockerignore  .env.template  Dockerfile  MCP_SPEC.md  README.md  docker-compose-rest.yml  docker-compose-server.yml  docker-compose.yml  inspector-config.json  memories.json  pyproject.toml  test-all-transports.sh  test-http-server.sh  test-server-api.sh
mcp-sem-4aireporter/bruno/: API Root.bru  Create Test Case.bru  Generic Tool Call.bru  Get Bugs.bru  Get Requirements.bru  Get Test Cases by Requirement.bru  Get Test Cases.bru  Get Test Executions.bru  Health Check.bru  Link Test Case to Requirement.bru  List Tools.bru  README.md  bruno.json
mcp-sem-4aireporter/bruno/Analytics/: Get Data Completeness.bru  Get Future Outlook.bru  Get Insights.bru  Get Visual Analytics.bru
mcp-sem-4aireporter/bruno/environments/: Docker.bru  Local.bru
mcp-sem-4aireporter/src/: __init__.py  main.py  rest_api_wrapper.py
mcp-textpseudomizer/: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  PROJECT.md  README.md  docker-compose.yml  main-minimal.py  main.py  memories.json  pyproject.toml  pytest.ini
mcp-textpseudomizer/src/: entity_mapping.py  error_handling.py  extended_patterns.py  language_detection.py  mcp_tools.py  ner_pipeline.py  pseudonymizer.py
mcp-textpseudomizer/tests/: conftest.py  test_pseudonymizer.py
mcp-tg-jira-seminarapp/: .env.template  Dockerfile  README.md  pyproject.toml
mcp-tg-jira-seminarapp/src/: main.py  playground.py
